完成联网搜索tool